// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: .NET 1`] = `
<DotNet
  baseUrl="http://example.com"
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  token="myToken"
/>
`;

exports[`renders correctly: CFamily 1`] = `
<ClangGCCCustom
  baseUrl="http://example.com"
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  isLocal={true}
  os="linux"
  token="myToken"
/>
`;

exports[`renders correctly: Empty CFamily 1`] = `""`;

exports[`renders correctly: gradle 1`] = `
<JavaGradle
  baseUrl="http://example.com"
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  token="myToken"
/>
`;

exports[`renders correctly: maven 1`] = `
<JavaMaven
  baseUrl="http://example.com"
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  token="myToken"
/>
`;

exports[`renders correctly: other 1`] = `
<Other
  baseUrl="http://example.com"
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  isLocal={true}
  os="win"
  token="myToken"
/>
`;
